force-app/main/default/objects/TMS_Ticket__c/fields/Street_address__c.field-meta.xml
<CustomField>
    <fullName>Street_address__c</fullName>
    <label>Street address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>