force-app/main/default/objects/TMS_Ticket__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Technical_Issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet not working</fullName>
            </value>
            <value>
                <fullName>UPS not up and running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>