force-app/main/default/objects/TMS_Ticket__c/fields/Technical_Issue__c.field-meta.xml
<CustomField>
    <fullName>Technical_Issue__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Issue</fullName>
            </value>
            <value>
                <fullName>Power Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>