force-app/main/default/objects/TMS_Ticket__c/fields/Tiket_Requested_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Tiket_Requested_From_Location__c</fullName>
    <label>Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>