force-app/main/default/objects/TMS_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Priority__c</columns>
    <columns>Severity__c</columns>
    <columns>Status__c</columns>
    <columns>Technical_Issue__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>