force-app/main/default/objects/TMS_Ticket__c/listViews/High_Priority_Queue.listView-meta.xml
<ListView>
    <fullName>High_Priority_Queue</fullName>
    <columns>NAME</columns>
    <columns>Ticket__c</columns>
    <columns>Priority__c</columns>
    <columns>Severity__c</columns>
    <columns>Technical_Issue__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>High Priority Queue</label>
    <sharedTo>
        <role>Back_Office_Agent</role>
    </sharedTo>
</ListView>