force-app/main/default/objects/TMS_Ticket__c/listViews/Ticket_list_view.listView-meta.xml
<ListView>
    <fullName>Ticket_list_view</fullName>
    <columns>NAME</columns>
    <columns>Ticket__c</columns>
    <columns>Priority__c</columns>
    <columns>Severity__c</columns>
    <columns>Technical_Issue__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ticket list view</label>
    <sharedTo>
        <role>Call_Center_Agent</role>
    </sharedTo>
</ListView>